tests/redeclaration.c
//@FAIL
int main() {
    int x = 0;
    int x = 5;
    return 0;
}